# 1c-optimyzer

./: .env.example  .env.production  .env.test.example  .gitignore  CLAUDE.md  LICENSE  NOTICE.md  QUICKSTART.md  README.md  SALES_SPRINT_PROMT.md  SPRINT_7_DISCOVERY_PROMT.md  SPRINT_8_PHASE_C_PROMT.md  start.bat
DESIGN_CONCEPT/: README.md  (+2 more)
backend/: README.md  pyproject.toml
backend/explainers/: README.md  deadlock_different_order.md  deadlock_lock_escalation.md  deadlock_single_resource.md  exception_deadlock_victim.md  exception_timeout.md  lock_timeout.md  operation_heavy.md  slow_op_call_cascade.md  slow_op_heavy_sql.md  slow_op_locks.md
backend/query_analyzer_rules/: README.md  comma_join_implicit.md  function_in_where.md  in_with_subquery.md  not_in_with_subquery.md  or_in_where.md  pervye_without_order.md  select_distinct.md  select_star.md  subquery_in_join.md  temp_table_without_index.md  union_without_all.md  virtual_table_in_join.md  vyrazit_in_where.md
backend/scripts/: inspect_configuration_xml.py  inspect_extra_json.py  inspect_logs.py
backend/src/optimyzer_backend/: __init__.py  __main__.py
backend/src/optimyzer_backend/ai/: __init__.py  config.py  explainer.py  schemas.py
backend/src/optimyzer_backend/archive/: extractor.py
backend/src/optimyzer_backend/bsl_ls/: __init__.py  client.py  lifecycle.py  models.py  parser.py  protocol.py  runtime.py
backend/src/optimyzer_backend/configuration_metadata/: __init__.py  api.py  parser.py  store.py
backend/src/optimyzer_backend/explainer/: __init__.py  cache.py  classifier.py  claude_client.py  rule_loader.py
backend/src/optimyzer_backend/ingest/: __init__.py  encoding_detector.py  folder_source.py  log_detector.py  process_role_extractor.py  progress_reporter.py  source.py  zip_source.py
backend/src/optimyzer_backend/models/: __init__.py  archive.py  events.py
backend/src/optimyzer_backend/oql/: __init__.py  ast.py  compiler.py  grammar.lark  parser.py  templates.py  validator.py
backend/src/optimyzer_backend/parsers/: tj_parser.py
backend/tests/: conftest.py  test_ai_settings_byok.py  test_anatomy.py  test_architecture.py  test_archive_extractor.py  test_comparison.py  test_configuration_metadata.py  test_configuration_rpc.py  test_context_normalization.py  test_deadlock_anatomy.py  test_duckdb_appender.py  test_e2e_parse_to_query.py  test_encoding_detector.py  test_explainer.py  test_explainer_cache_and_ai.py  test_folder_source.py  test_golden_suite.py  test_load_directory.py  test_log_detector.py  test_logcfg_rpc.py  test_oql_compiler.py  test_oql_e2e.py  test_oql_parser.py  test_parser_basic.py  test_pg_connections.py  test_pg_re_explain_integration.py  test_pg_safety.py  test_plan_analyzer_rpc.py  test_plan_performance.py  test_plan_regression.py  test_process_role_extractor.py  test_progress_reporter.py  test_query_analyzer.py  test_rpc_dispatcher.py  test_saved_queries.py  test_semantic_rules.py  test_sprint1_real_folder.py  test_sprint2_real_data.py  test_sprint3_real_data.py  test_sprint4_real_data.py  (+11 more)
backend/tests/bsl_ls/: test_integration.py  test_lifecycle.py  test_models.py  test_parser.py  test_protocol.py  test_rpc.py
backend/tests/fixtures/: synthetic_tdeadlock_archive.py
backend/tests/regression/: __init__.py  test_classifier.py  test_operation_matcher.py
backend/tests/sql/: test_antipatterns.py
backend/tests/sql_antipatterns/: fixtures_real_pg_queries.json  test_performance.py  test_postgres_detectors.py  test_postgres_real_data.py  test_real_world_regression.py
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs  sidecar.rs
server/: .coverage  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
server/api/: __init__.py  db.py  deps.py  main.py  settings.py
server/api/routers/: __init__.py  admin.py  ai.py  auth.py  config.py  credits.py  dashboard.py  devices.py  license.py  subscriptions.py  telemetry.py  usage.py  webhooks.py
server/migrations/: env.py
server/migrations/versions/: 2026_05_23_2134_initial_schema.py  2026_05_24_0112_add_desktop_sessions_table.py  2026_05_24_0208_user_yandex_id_nullable_email_unique.py  2026_05_24_0215_drop_desktop_sessions_email_only_flow.py  2026_05_29_2349_remote_config_table_s13.py
server/models/: __init__.py  base.py  credits.py  desktop_session.py  device.py  license_key.py  payment.py  refresh_token.py  remote_config.py  subscription.py  telemetry.py  usage.py  user.py
server/schemas/: __init__.py  ai.py  auth.py  config.py  credits.py  devices.py  license.py  subscriptions.py  telemetry.py  usage.py
server/scripts/: _e2e_check.py
server/services/: __init__.py  ai_explainer.py  auth_service.py  config_service.py  credits_service.py  desktop_session_service.py  device_service.py  email_lookup_service.py  jwt_service.py  license_keys_service.py  payment_processor.py  rate_limiter.py  recurring_billing.py  scheduler.py  soft_caps.py  subscription_service.py  telemetry_service.py  usage_service.py  yandex_oauth.py  yookassa_client.py
server/services/ai_cache/: __init__.py  canonicalize.py  models.py  service.py  storage.py
server/tests/: conftest.py  factories.py  test_ai_auth_required.py  test_ai_cache_canonicalize.py  test_ai_cache_integration.py  test_ai_cache_service.py  test_ai_cache_storage.py  test_ai_explain.py  test_ai_explain_pg_plan.py  test_ai_explain_plan.py  test_ai_generate_logcfg.py  test_ai_normalize.py  test_auth_router.py  test_auth_service.py  test_credits.py  test_jwt.py  test_license.py  test_rate_limiter.py  test_remote_config.py  test_soft_caps.py  test_subscriptions.py  test_telemetry.py  test_usage_and_devices.py  test_yandex_oauth.py  test_yookassa.py
(+619 files in other folders)
