[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimyzer-backend"
version = "0.1.0"
description = "Python sidecar для 1C-Optimyzer Module 1 (OptimyzerQL Standalone)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-Proprietary" }
authors = [{ name = "anymasoft" }]

dependencies = [
    "pydantic>=2.6,<3",
    "duckdb>=1.0",
    "aiofiles>=23.2",
    "pyarrow>=15",
    "sqlparse>=0.4",
    "anthropic>=0.40",
    # Sprint 6 — bsl-language-server adapter (WebSocket sidecar)
    "websockets>=12,<14",
    # Sprint 6 Phase F — T-SQL antipatterns detector (used in TopSQL + QueryAnalyzer T-SQL view)
    "sqlglot>=30.8,<31",
    # Sprint 8 Phase B — opt-in PostgreSQL connection для re-EXPLAIN service
    # (получение EXPLAIN FORMAT JSON для pev2 visualization).
    # asyncpg: async PG driver. keyring: cross-platform secure storage паролей.
    "asyncpg>=0.29,<0.31",
    "keyring>=24,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
build = [
    "pyinstaller>=6.5",
]

[project.scripts]
optimyzer-backend = "optimyzer_backend.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Sprint 6 — integration тесты (JVM spawning) исключены из default запуска.
# Запуск: `pytest -m integration` или `pytest tests/bsl_ls/test_integration.py`.
addopts = "-ra -q -m 'not integration'"
asyncio_mode = "auto"
# Sprint 6 — bsl-LS adapter использует module-singleton client. asyncio.Event/Future
# bound к loop, в котором созданы. И fixture, и test должны быть в ОДНОМ loop —
# иначе reader_task в loop M ставит Event, который ждётся в loop F → deadlock.
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
markers = [
    "integration: реальный bsl-LS JVM (медленно, требует setup-bsl-ls-binaries.ps1)",
    "performance: latency/throughput benchmarks (исключены из default CI, запуск: pytest -m performance)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
