[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimyzer-server"
version = "0.6.0"
description = "Backend API for Optimyzer web cabinet, auth, billing, license activation"
requires-python = ">=3.11"
authors = [{ name = "AnymaSoft" }]
dependencies = [
    # web
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # db
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",                 # prod (PostgreSQL)
    "asyncpg>=0.29",                        # async PG (if нужен async ORM)
    # auth / crypto
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "itsdangerous>=2.2",
    # http client (Yandex OAuth, YooKassa)
    "httpx>=0.27",
    # YooKassa
    "yookassa>=3.4",
    # email
    "aiosmtplib>=3.0",
    # scheduling (recurring billing, telemetry cleanup)
    "apscheduler>=3.10",
    # observability minimal
    "structlog>=24.1",
    # rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",                          # mock httpx
    "ruff>=0.5",
    "mypy>=1.10",
    "types-passlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "models*", "services*", "schemas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --cov=api --cov=models --cov=services --cov=schemas --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["B008"]                            # FastAPI's Depends() in defaults — это норма

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
